[gd_scene load_steps=2 format=3 uid="uid://h8q6y4n2x5m6w"]

[ext_resource type="Script" path="res://src/scenes/campaign/components/EventLog.gd" id="1_l5m3r"]

[node name="EventLog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5m3r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Campaign Events"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Filters" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SearchBox" type="LineEdit" parent="VBoxContainer/Filters"]
layout_mode = 2
placeholder_text = "Search events..."
clear_button_enabled = true

[node name="Categories" type="HBoxContainer" parent="VBoxContainer/Filters"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MainContent" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EventList" type="VBoxContainer" parent="VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DetailPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DetailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DetailText" type="RichTextLabel" parent="VBoxContainer/DetailPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Select an event to see details"
fit_content = true 